# ESP32_Remote

./: .gitignore  CLAUDE.md  CMakeLists.txt  boot_mode_plan.md  compile_commands.json  partitions.csv  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.claude/: settings.local.json
.claude/memory/: MEMORY.md  feedback_language.md  hardware-specs.md  project-status.md  session-20260603-audio-integration.md
ESP32/: .clangd  .gitignore  CMakeLists.txt  README.md  audio_list.csv  partitions.csv  readme.txt  sdkconfig  sdkconfig.defaults
ESP32/components/RC/: CMakeLists.txt
ESP32/components/RC/include/: dwc2_forward.h  logo_horizontal.h  logo_icon.h  rc_audio.h  rc_ble.h  rc_bridge.h  rc_crsf.h  rc_led.h  rc_read.h  rc_sdcard.h  rc_usb.h  rc_usb_host.h  rc_usb_msc.h  rc_wf.h  tile_data.h
ESP32/components/RC/src/: index.html  rc_audio.c  rc_ble.c  rc_bridge.c  rc_crsf.c  rc_led.c  rc_read.c  rc_sdcard.c  rc_usb.c  rc_usb_host.c  rc_usb_msc.c  rc_wf.c
ESP32/main/: CMakeLists.txt  idf_component.yml  main.c
ESP32/tools/: download_tiles.py  pack_tiles.py
ESP32/tools/audio_gen/: README.md  audio_list.csv  tts_gen.py
components/RC/include/: rc_ble.h  rc_crsf.h  rc_usb.h  rc_wf.h
components/RC/src/: rc_ble.c  rc_crsf.c  rc_usb.c  rc_wf.c
docs/: ADC调试模块.md  crsf-telemetry.md  gps-map-plan.md  tile-serving.md  启动模式设计.md  开关机方案对比.md  透穿调参模式_可行性研究报告.md
main/: main.c
tools/: capture_msp.py
web/: CMakeLists.txt  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
web/src/: App.vue  mockCrsfState.js  style.css
web/src/components/: AuxChannelSlider.vue  CalibrationModal.vue  ChannelBar.vue  ConfigChannelMapping.vue  ConfigChannelProps.vue  ConfigProfiles.vue  ConfigStickMode.vue  CrsfConfiguratorPanel.vue  Joystick.vue  LedConfiguratorPanel.vue  MapPanel.vue  StickDiagram.vue  TelemetryPanel.vue  WebSocketConnection.vue
web/src/components_en/: AuxChannelSlider.vue  CrsfConfiguratorPanel.vue  Joystick.vue  WebSocketConnection.vue
web/src/composables/: useRCState.js
web/src/router/: index.js
web/src/views/: Main_en.vue  Main_zh.vue
web/tmp-dist/: index.html
